package controllers

/*
Controller defines an interface for the controller.
*/
type Controller interface {
	Run()
}
